--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/icon-app-1024.png" />
+    <link rel="apple-touch-icon" href="/icon-app-1024.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FaithWall - Transform Your Lock Screen with Daily Scripture & Inspiration</title>
     <meta name="description" content="Turn your iPhone lock screen into a daily source of faith. Beautiful scripture, prayers, and inspiration every time you pick up your phone. Free download." />
