Optimize mobile performance: remove heavy GPU blurs, experimental CSS, and improve code splitting

--- a/index.html
+++ b/index.html
@@ -1,25 +1,36 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/favicon.png" />
-    <link rel="apple-touch-icon" href="/icon-app-180.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>FaithWall - Transform Your Lock Screen with Daily Scripture & Inspiration</title>
-    <meta name="description" content="Turn your iPhone lock screen into a daily source of faith. Beautiful scripture, prayers, and inspiration every time you pick up your phone. Free download." />
-    <meta name="keywords" content="Christian app, Bible verses, lock screen, iOS widget, daily devotional, scripture wallpaper, prayer app, faith app" />
-    <meta property="og:title" content="FaithWall - Transform Your Lock Screen with Daily Scripture" />
-    <meta property="og:description" content="Turn your iPhone lock screen into a daily source of faith. Beautiful scripture, prayers, and inspiration every time you pick up your phone." />
-    <meta property="og:type" content="website" />
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="FaithWall - Daily Scripture on Your Lock Screen" />
-    <meta name="twitter:description" content="Beautiful scripture, prayers, and inspiration every time you pick up your phone." />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;600;700&family=Playfair+Display:wght@400;500;600;700&display=swap" rel="stylesheet" />
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/png" href="/favicon.png" />
+  <link rel="apple-touch-icon" href="/icon-app-180.png" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>FaithWall - Transform Your Lock Screen with Daily Scripture & Inspiration</title>
+  <meta name="description"
+    content="Turn your iPhone lock screen into a daily source of faith. Beautiful scripture, prayers, and inspiration every time you pick up your phone. Free download." />
+  <meta name="keywords"
+    content="Christian app, Bible verses, lock screen, iOS widget, daily devotional, scripture wallpaper, prayer app, faith app" />
+  <meta property="og:title" content="FaithWall - Transform Your Lock Screen with Daily Scripture" />
+  <meta property="og:description"
+    content="Turn your iPhone lock screen into a daily source of faith. Beautiful scripture, prayers, and inspiration every time you pick up your phone." />
+  <meta property="og:type" content="website" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="FaithWall - Daily Scripture on Your Lock Screen" />
+  <meta name="twitter:description"
+    content="Beautiful scripture, prayers, and inspiration every time you pick up your phone." />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;600;700&family=Playfair+Display:wght@400;500;600;700&display=swap"
+    rel="stylesheet" />
+
+  <!-- Preload Critical Assets -->
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
